@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -36,7 +36,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
 
         <!-- Melosys -->
         <melosys.jsonschema.version>1.35.132</melosys.jsonschema.version>
@@ -44,20 +44,18 @@
         <melosys.brev.version>1.2.82</melosys.brev.version>
 
         <!-- NAV -->
-        <nav.tjenestespesifikasjoner.version>1.2020.01.09-12.44-3713b7c04e1c</nav.tjenestespesifikasjoner.version>
+        <nav.tjenestespesifikasjoner.version>1.2021.02.22-10.45-4201aaea72fb</nav.tjenestespesifikasjoner.version>
         <abac.spring.version>1.6.0</abac.spring.version>
         <behandlingstatus.version>1.1.0</behandlingstatus.version>
         <doksys.dokumentproduksjon.version>3.3.4</doksys.dokumentproduksjon.version>
         <joark.journalfoerinngaaende.version>0.0.21</joark.journalfoerinngaaende.version>
-        <sakogbehandling.version>1.0.0-alpha011</sakogbehandling.version>
-        <token-support.version>1.3.7</token-support.version>
-        <utbetaling.version>1.1.3</utbetaling.version>
+        <token-support.version>1.3.8</token-support.version>
 
         <!-- Versjoner av eksterne biblioteker -->
         <archunit.version>0.19.0</archunit.version>
         <apache-httpclients.version>4.5.13</apache-httpclients.version>
         <caffeine.version>3.0.2</caffeine.version>
-        <cxf.version>3.4.3</cxf.version>
+        <cxf.version>3.4.4</cxf.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang.version>3.9</commons-lang.version>
         <commons-text.version>1.8</commons-text.version>
@@ -94,10 +92,10 @@
         <javassist.version>3.27.0-GA</javassist.version>
         <jaxb2-basics-runtime.version>0.12.0</jaxb2-basics-runtime.version>
         <joda-time.version>2.10.10</joda-time.version>
-        <objenesis.version>3.1</objenesis.version>
+        <objenesis.version>3.2</objenesis.version>
         <stax2-api.version>4.2.1</stax2-api.version>
         <woodstox.version>6.2.3</woodstox.version>
-        <xmlsec.version>2.1.4</xmlsec.version>
+        <xmlsec.version>2.2.2</xmlsec.version>
         <medlemskapsunntak-api-v1.version>1.1</medlemskapsunntak-api-v1.version>
         <wiremock-standalone.version>2.27.2</wiremock-standalone.version>
     </properties>
@@ -227,17 +225,7 @@
                 <version>${nimbus-jose-jwt.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>xdb6</artifactId>
-                <version>${oracle.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>xmlparserv2</artifactId>
-                <version>${oxmlparserv2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.oracle.jdbc</groupId>
+                <groupId>com.oracle.database.jdbc</groupId>
                 <artifactId>ojdbc8</artifactId>
                 <version>${ojdbc.version}</version>
             </dependency>
@@ -382,7 +370,7 @@
             <dependency>
                 <groupId>com.google.errorprone</groupId>
                 <artifactId>error_prone_annotations</artifactId>
-                <version>2.6.0</version>
+                <version>2.7.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-logging</groupId>
@@ -494,10 +482,10 @@
                 <version>${nav.tjenestespesifikasjoner.version}</version>
             </dependency>
             <dependency>
-                <groupId>no.nav.tjenester.fim</groupId>
-                <artifactId>nav-fim-sakOgBehandling-v1-tjenestespesifikasjon</artifactId>
-                <version>${sakogbehandling.version}</version>
-                <classifier>jaxws</classifier>
+                <groupId>no.nav.tjenestespesifikasjoner</groupId>
+                <artifactId>sakogbehandling-tjenestespesifikasjon</artifactId>
+                <!--<artifactId>nav-fim-sakogbehandling-v1-tjenestespesifikasjon</artifactId>-->
+                <version>${nav.tjenestespesifikasjoner.version}</version>
             </dependency>
             <!--MEDL2 -->
             <dependency>
@@ -525,10 +513,9 @@
             </dependency>
             <!-- Utbetaling -->
             <dependency>
-                <groupId>no.nav.tjenester.fim</groupId>
-                <artifactId>nav-fim-utbetaling-v1-tjenestespesifikasjon</artifactId>
-                <classifier>jaxws</classifier>
-                <version>${utbetaling.version}</version>
+                <groupId>no.nav.tjenestespesifikasjoner</groupId>
+                <artifactId>utbetaling-tjenestespesifikasjon</artifactId>
+                <version>${nav.tjenestespesifikasjoner.version}</version>
             </dependency>
 
             <!-- Test -->
@@ -617,7 +604,6 @@
                     <configuration>
                         <release>${java.version}</release>
                         <encoding>UTF-8</encoding>
-                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -649,13 +635,13 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xms256m -Dfile.encoding=UTF-8 --enable-preview</argLine>
+                        <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.1.2</version>
+                    <version>${maven-dependency-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
